Change Max pseudo

--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -176,7 +176,7 @@ Découpage du jeu:
 \paragraph{}
 \begin{tabular}{|c|c|c|c|c|}
  \hline 
- \rowcolor{cyan}Tâches \ Pers. & Trasher & Thibal & Max & Flow \\ 
+ \rowcolor{cyan}Tâches \ Pers. & Trasher & Thibal & Zahpod & Flow \\ 
  \hline 
  \cellcolor{lightgray}Graphisme & \cellcolor{red} &  &  & \cellcolor{yellow} \\ 
  \hline 
