Add ressources paragraph

--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -225,7 +225,8 @@ réalisation des bandes son du jeu
 \item[-] Visual Studio 2017 / JetBrain's Rider : permettront la programmation en CSharp
 \item[-] Blender: permettront de réaliser les objets 3D présents dans le jeu
 \end{itemize}
-
+\subsection{Ressources Économiques}
+Les ressources économiques se résument très rapidement, possédant déjà l'ensemble des logiciels et ressources nécessaires, le café sera la seule chose vraiment essentielle au bon avancement du projet.
 \newpage
 \baselineskip = 18 pt
 \section{Conclusion}
