CdCharges corrigé 1fois

--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -26,13 +26,13 @@
 \end{center}
   Le cahier des charges qui suit a pour but de présenter le projet du groupe Error 523.
 Il permet alors d'expliquer l'intérêt du projet Origin Is Unreachable, un jeu dans lequel un homme dont
-on ne connait pas les origines (du moins au début) doit s'échapper d'une pyramide, garde par une
+on ne connaît pas les origines (du moins au début) doit s'échapper d'une pyramide, gardée par une
 momie, entourée de mystère.
-Le groupe error 523 est compose de 4 étudiants de la promo 2022 d’EPITA.
-Grâce aux pages qui vont suivre, vous pourrez aisément constater des différents questionnements
-autours de ce projet, nous pourrons vous montrer le planning de déroulement du projet, avec quels
-outils nous comptons le réaliser, la gestion du temps et du travail que nous avons prévu.
-Pour clore cette introduction, on peut dire que ce travail peut être considéré comme le premier réel
+Le groupe error 523 est composé de 4 étudiants de la promo 2022 d’EPITA.
+Grâce aux pages qui vont suivre, vous pourrez aisément constater différents questionnements
+autour de ce projet, nous pourrons vous en montrer le planning de déroulement, avec quels
+outils nous comptons le réaliser, la gestion du temps et du travail que nous avons prévue.
+Pour clore cette introduction, nous pouvons dire que ce travail est considéré comme le premier réel
 projet que nous devons faire sur une grande durée et dans la plus grande autonomie.
 \vspace*{\stretch{1}}
 \newpage
@@ -43,12 +43,12 @@ projet que nous devons faire sur une grande durée et dans la plus grande autono
 \section {A propos du groupe}
 \subsection{Formation du groupe}
 \paragraph{}
-Arrivant a l'EPITA et ne connaissant personne, nous nous sommes rencontrés durant les premiers mois de l'année, rapidement nous nous sommes rendu compte que nous avions des affinités en communs et que nous nous entendions très bien. En accord sur la plupart des sujets et ayant tous une idée très similaire du projet, nous avons décidé de nous mettre ensemble assez rapidement, en se laissant les derniers mois du premier semestre pour juger de notre capacité à travailler ensemble et si nous pensions pouvoir réussir ce projet ensemble. C'est alors que nous avons décidé de former le groupe Error 523 au début du mois de décembre. Nous pensons que ce projet va nous permettre de progresser aussi bien sur notre capacité à travailler en groupe, à évoluer individuellement, permettre de développer toujours plus nos compétences dans le milieu de l'informatique ainsi que dans la gestion de travaux.
+Arrivant a l'EPITA et ne connaissant personne, nous nous sommes rencontrés durant les premiers mois de l'année, rapidement nous nous sommes rendus compte que nous avions des affinités et que nous nous entendions très bien. En accord sur la plupart des sujets et ayant tous une idée très similaire du projet, nous avons décidé de nous mettre ensemble assez rapidement, en se laissant les derniers mois du premier semestre pour juger de notre capacité à travailler tout les quatre et si nous pensions pouvoir réussir ce projet. C'est alors que nous avons décidé de former le groupe Error 523 au début du mois de décembre. Nous pensons que ce projet va nous permettre de progresser aussi bien sur notre capacité à travailler en groupe, à évoluer individuellement, permettre de développer toujours plus nos compétences dans le milieu de l'informatique ainsi que dans la gestion de travaux.
 
 \paragraph{}
 De plus, ayant tous des domaines de prédilections dans l'informatique, la répartition des tâches (que vous pourrez voir plus loin dans ce même cahier) s'est faite naturellement et à ce jour le travail s'organise assez bien. Malgré des emplois du temps différents car nous ne sommes pas tous dans la même classe, nous arrivons à trouver des moments pour travailler, autant individuellement qu'ensemble.
 \begin{center}
-\textbf{Le plus gros restant encore a faire !}
+\textbf{Le plus gros restant encore à faire !}
 \end{center}
 \newpage
 \subsection{Présentation des membres}
@@ -58,27 +58,27 @@ De plus, ayant tous des domaines de prédilections dans l'informatique, la répa
 Game designer et Programmeur réseaux}
 \end{center}
 
-Intéressé par le milieu de l'informatique et très souvent ayant été entouré par des personnes gravitant autour de ce domaine, j'ai rapidement été attiré par ce milieu. Ayant néanmoins que très peu pratiqué avant mon entrée a EPITA, ce fut une grande découverte, qui a été et qui est toujours, à la hauteur de mes espérances.
+Intéressé par le milieu de l'informatique et ayant été souvent entouré par des personnes gravitant autour de ce domaine, cela m'a rapidement passionné. N'ayant néanmoins que très peu pratiqué avant mon entrée à EPITA, ce fut une grande découverte, qui a été et qui est toujours, à la hauteur de mes espérances.
 
-Au sein du groupe Error 523, je suis principalement chargé du game design mais aussi de la partie réseaux et multi-joueur, ce qui va consister en une tâche de très grande importance, d'autant plus que j'aimerais faire du réseaux dans la suite de mon cursus à EPITA.
+Au sein du groupe Error 523, je suis principalement chargé du game design mais aussi de la partie réseaux et multi-joueurs, ce qui va consister en une tâche de très grande importance, d'autant plus que j'aimerais faire du réseau dans la suite de mon cursus à EPITA.
    
-J'espère, grâce a ce projet, pouvoir améliorer mes compétences dans le monde de l'informatique, mais aussi dans ma capacité à travailler en groupe, et je compte bien mener ce projet à son terme avec le reste de mon équipe.
+J'espère, grâce à ce projet, pouvoir améliorer mes compétences dans le monde de l'informatique, mais aussi dans ma capacité à travailler en groupe, et je compte bien mener ce projet à son terme avec le reste de mon équipe.
 
 \begin{center}
 \textbf{Thibault LEMPEREUR "Thibal" - 18 ans - Ancien Terminal S\newline Développeur web et Programmeur scripts}
 
 \end{center}
 
-J'ai intégré l'EPITA car je suis passionné par l'informatique depuis maintenant plusieurs années. J'étais néanmoins débutant en programmation mais j'ai redoubler d'effort pour rattraper mon retard. Cependant je n ai pas encore eu l'occasion de participer à un projet comme celui ci, ce qui est donc une très bonne opportunité. En effet ce projet va me permettre de gagner en maturité mais également de pouvoir progresser aussi bien en programmation qu'en travail d'équipe. Le projet Origin is Unreachable est un projet qui me tient à coeur et je vais m'investir au maximum dans ce dernier. Mon rôle au sein de ce groupe sera le développement du site web, le scénario, le script et la partie audio. 
+J'ai intégré l'EPITA car je suis passionné par l'informatique depuis maintenant plusieurs années. J'étais néanmoins débutant en programmation mais j'ai redoublé d'efforts pour rattraper mon retard. Cependant je n ai pas encore eu l'occasion de participer à un projet comme celui-ci, ce qui est donc une très bonne opportunité. En effet ce projet va me permettre de gagner en maturité mais également de pouvoir progresser aussi bien en programmation qu'en travail d'équipe. Le projet Origin is Unreachable est un projet qui me tient à coeur et je vais m'investir au maximum dans ce dernier. Mon rôle au sein de ce groupe sera le développement du site web, le scénario, le script et la partie audio. 
 \newpage
 \begin{center}
 \textbf{Maxime CHARDON « Zaphod» - 18 ans – Ancien Terminal S
 Programmeur scripts et Programmeur réseaux}
 \end{center}
 
-Ayant un entourage travaillant dans le milieu de l’informatique et de par l’ampleur que prend celle-ci dans la société autant actuel que futur, l’idée de travailler dans ce domaine met apparue nettement.
+Ayant un entourage travaillant dans le milieu de l’informatique et de par l’ampleur que prend celle-ci dans la société autant actuelle que future, l’idée de travailler dans ce domaine m'est apparue nettement.
 
-Malgré cela je n’ai que très peu pratiqué avant mon entré à l’EPITA et ce premier semestre était à la hauteur de mes espérances. J’ai très vite voulue participé à des projets de groupe ou individuel et en ayant pris connaissance du projet de fin d’année, j’ai vite commencé à étudié la programmation avec Unity. J’ai aussi pris part à de nombreuses conférences ou encore évènement comme une « Jam » où nous avons avec un camarade rendu un jeu fait en une dizaines d’heures avec l’aide de Unity. Voilà pourquoi au sein de ce projet je m’occuperai principalement des scripts CSharp avec unity mais aussi de la partie réseau.
+Malgré cela je n’ai que très peu pratiqué avant mon entré à l’EPITA et ce premier semestre était à la hauteur de mes espérances. J’ai très vite voulu participer à des projets de groupe ou individuel et en ayant pris connaissance du projet de fin d’année, j’ai vite commencé à étudié la programmation avec Unity. J’ai aussi pris part à de nombreuses conférences ou encore évènements comme une « Jam » où nous avons avec un camarade rendu un jeu fait en une dizaine d’heures avec l’aide de Unity. Voilà pourquoi au sein de ce projet je m’occuperai principalement des scripts CSharp avec Unity mais aussi de la partie réseau.
 
 J’espère de ce projet qu’il m’apporte une certaine expérience dans le domaine de l’informatique, mais aussi dans le travail d’équipe qui est selon moi quelque chose de primordial dans ce milieu. Je compte mener ce projet à son terme avec mon équipe.
 
@@ -86,24 +86,24 @@ J’espère de ce projet qu’il m’apporte une certaine expérience dans le do
 \textbf{Florentin SOUBRAND « Flow» - 18 ans – Ancien Terminal S \newline
 Game desin, Programmeur réseaux et Chef de Projet}
 \end{center}
-	Je me suis tourné vers l'informatique depuis l'âge de 14 ans et ai exploré quelques langages de programmation jusqu'au début du lycée. C'est pourquoi mon orientation ne posait pas de problème. Ainsi mes débuts à EPITA furent assez simple du côté de l'algorithmique et de la programmation.
+	Je me suis tourné vers l'informatique depuis l'âge de 14 ans et ai exploré quelques langages de programmation jusqu'au début du lycée. C'est pourquoi mon orientation ne posait pas de problème. Ainsi mes débuts à EPITA furent assez simples du côté de l'algorithmique et de la programmation.
 
 	Mais à présent tout est nouveau, je ne connaissais ni Unity ni réellement le CSharp, il y encore 2 semaines. J'attends de ce projet qu'il m'aide à partager mes connaissances et en acquérir de nouvelles grâce au groupe. De plus étant chef du groupe je vais devoir apprendre à gérer une équipe ainsi que les conflits qui y surviendront.Ce qui me parait être une très bonne expérience pour la suite de ma scolarité.
 	
-	Le cursus est les projets proposés sont engageants et encourageants : ils m'ont permis de m'investir pleinement dans les TP et dans ce Jeu que nous allons réaliser durant cette fin d'année.
+	Le cursus et les projets proposés sont engageants et encourageants : ils m'ont permis de m'investir pleinement dans les TP et dans ce Jeu que nous allons réaliser durant cette fin d'année.
 \baselineskip = 20 pt
 \newpage
 \section{Origine et Nature du projet}
 \subsection{Origine du projet}
 L'idée du projet nous est venue lors d'une discussion autour des films
 d'horreur sur un trajet de retour de l'école. On s'est alors demandé comment rendre ce
-jeu intéressant et différents des autres tout en restant de près ou de loin accessible à nos capacités.
+jeu intéressant et différent des autres tout en restant de près ou de loin accessible à nos capacités.
 La suite nous est venue naturellement en développant
-notre idée en groupe. Étant partie d'une simple idée de jeu d'horreur, cette dernière a progressivement germée et
+notre idée en groupe. Étant partie d'une simple idée de jeu d'horreur, cette dernière a progressivement germé et
 nous avons fini par décider de faire évoluer le personnage dans une pyramide, changeant un peu du
 décor d'une simple maison ou ferme, que l'on retrouve fréquemment dans les jeux de ce style.
 Nous avons pu puiser nos idées de différents autres jeux, tel Slender, Resident Evil ou encore Outlast,
-pour pouvoir imaginer notre jeu. Malgré un décor complètement différents de ces derniers, nous
+pour pouvoir imaginer notre jeu. Malgré un décor complètement différent de ces derniers, nous
 comptons bien rendre le jeu un tant soit peu horrifique du moins dans l'ambiance.
 Des courses dans des labyrinthes et des énigmes à résoudre vous attendent donc dans la suite de cette
 description...
@@ -113,7 +113,7 @@ description...
 \subsubsection{Type de jeu}
 Notre projet est un jeu d'aventure basé sur l'horreur et des énigmes, le tout à la première personne.
 \subsubsection{Gameplay}
-Pour la partie solo le joueur est dans une pyramide, dont il doit s'échapper, coincé avec une momie qui le pourchasse. Pour finir le jeu, ce dernier devra retrouver des fragments de clé qui lui rappelleront son chemin jusqu'ici tout en lui permettant de sortir de sa terrible situation. Son parcours étant alterné de salles à énigme et de course poursuite dans un labyrinthe.
+Pour la partie solo le joueur est dans une pyramide, dont il doit s'échapper, coincé avec une momie qui le pourchasse. Pour finir le jeu, ce dernier devra retrouver des fragments de clé qui lui rappelleront son chemin jusqu'ici tout en lui permettant de sortir de sa terrible situation. Son parcours étant alterné de salles à énigmes et de courses poursuite dans un labyrinthe.
 Pour le multi-joueur, il se déroule à 5 maximum, avec un joueur qui incarnera la momie et pourra à sa guise placer des pièges ou déchiqueter ses victimes.
 Les autres devront comme dans la partie solo essayer de s'échapper.
 \subsubsection{Scénario}
@@ -121,7 +121,7 @@ Un homme se retrouve seul, dans une pièce sombre, sans aucun souvenir...
 Très vite, il se rend compte que cette pièce, dont les murs sont couverts de hiéroglyphes et dont le sol est jonché d'os, qui doivent être ici depuis plusieurs centaine d'années, n'est pas un endroit banal....
 Mais il a beau chercher, aucun souvenir ne lui revient....
 Il décide alors de tenter de s'échapper....
-Sortir de la salle ? Il y arrivera surement... Mais échapper à la momie qui le pourchassera dans le labyrinthe et les salles suivantes ? Tout devient incertain...
+Sortir de la salle ? Il y arrivera sûrement... Mais échapper à la momie qui le pourchassera dans le labyrinthe et les salles suivantes ? Tout devient incertain...
 Si néanmoins il y parvient, il trouvera sur son chemin les fragments d'une mystérieuse clé, qui en plus de lui ouvrir la porte de la sortie finale, lui ouvrira certainement les portes de sa mémoire...
 
 \newpage
@@ -132,12 +132,12 @@ permettant de travailler en groupe: la cohésion, l'écoute, la diplomatie, le r
 Le fait que les membres du groupe se complètent par leurs qualités ainsi que leurs défauts permet de s'accorder une plus grande confiance dans la réalisation des différentes tâches et de proposer un travail
 homogène et de qualité.
 Ce projet étant le premier, il nous permettra d'apprendre les rudiments du travail en groupe et d'être
-alors prêt pour affronter les années qui suivront ou du moins les
+alors prêts pour affronter les années qui suivront ou du moins les
 prochains projets (nous l'espérons, plus sereinement).
 
 \subsection{Intérêts individuels}
 \paragraph{}
-Gagner en autonomie, apprendre à utiliser de nouveaux logiciels (tel Unity, TeXmaker ou encore GitHub), mettre en pratique les cours d'algorithmique et de programmation ou encore approfondir nos connaissances dans des domaines pas forcément abordés en cour, sont des avantages que ce projet nous apporte à tous.
+Gagner en autonomie, apprendre à utiliser de nouveaux logiciels (tel Unity, TeXmaker ou encore GitHub), mettre en pratique les cours d'algorithmique et de programmation ou encore approfondir nos connaissances dans des domaines pas forcément abordés en cours, sont des avantages que ce projet nous apporte à tous.
 De plus les soutenances permettront de travailler nos qualités à l'oral, que ce soit l'élocution ou encore la gestion du stress. Ce projet, s'il est réalisé sérieusement ne peut être que bénéfique dans les apports qu'il peut nous procurer.
 
 \newpage
@@ -147,13 +147,13 @@ Découpage du jeu:
 \begin{itemize}
 \item[-] Écriture du scénario et des dialogues.
 \item[-] Graphisme: tout ce qui est design des objets, personnages, environnements.
-\item[-] Réseaux: la création d'un réseaux permettant notamment l'implémentation de la partie multi-joueur.
+\item[-] Réseaux: la création d'un réseau permettant notamment l'implémentation de la partie multi-joueurs.
 \item[-] Gestion des événements, interfaces, et utilisateurs.
 \item[-] Création et gestion du site internet.
 \item[-] Implémentation des musiques, sons et bruitages.
 \end{itemize}
 \newpage
-\subsection{Répartition des taches}
+\subsection{Répartition des tâches}
 \paragraph{}
 \begin{center}
 \begin{tabular}{|c|c|c|c|}
@@ -176,7 +176,7 @@ Découpage du jeu:
 \paragraph{}
 \begin{tabular}{|c|c|c|c|c|}
  \hline 
- \rowcolor{cyan}Tâches \ Pers. & Trasher & Thibal & Zahpod & Flow \\ 
+ \rowcolor{cyan}Tâches \ Pers. & Trasher & Tibal & Zahpod & Flow \\ 
  \hline 
  \cellcolor{lightgray}Graphisme & \cellcolor{red} &  &  & \cellcolor{yellow} \\ 
  \hline 
@@ -204,12 +204,12 @@ Découpage du jeu:
 \newpage
 \section{Ressources utilisées}
 \subsection{Le matériel}
-Le matériel principale sera nos ordinateurs, néanmoins nous avons aussi utilisé une tablette graphique
+Le matériel principal sera nos ordinateurs, néanmoins nous avons aussi utilisé une tablette graphique
 pour la création des logos.
-Le plus gros du travail se fera donc a partir des ordinateurs, même si la consommation de nourriture
-peu recommandé pour le régime sera nécessaire pour travailler dans les conditions les plus correctes !
+Le plus gros du travail se fera donc à partir des ordinateurs, même si la consommation de nourriture
+peu recommandée pour le régime sera nécessaire pour travailler dans les conditions les plus correctes !
 \subsection{Les logiciels}
-Nous utiliserons les logiciels suivant pour mener notre projet a bien:
+Nous utiliserons les logiciels suivants pour mener notre projet à bien:
 \begin{itemize}
 \item[-] Unity : moteur de jeu 2D/3D permettant notamment à l'aide d'outils
 intuitifs (moteur physique, audio...) de réaliser des jeux en réseau et
@@ -230,7 +230,7 @@ Les ressources économiques se résument très rapidement, possédant déjà l'e
 \newpage
 \baselineskip = 18 pt
 \section{Conclusion}
-Ce projet est un donc un défi que nous allons relever du mieux que nous pourrons, nous allons mettre le meilleur de nous même pour le réussir le mieux possible.
+Ce projet est donc un défi que nous allons relever du mieux que nous pourrons, nous allons mettre le meilleur de nous-même pour le réussir le mieux possible.
 
 Il représente un enjeu de taille du fait que nous débutons globalement dans le milieu de l'informatique, il permettra de développer nos compétences en même temps que la réalisation d'un projet plus que concret (aucun d'entre nous ne se serait imaginé, il y a ne serait-ce que deux ans, qu'un jour il créerait un jeu vidéo !).
 
