CdChages Finally revised

--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -24,14 +24,15 @@
 \textbf{Introduction}
 \end{Large}
 \end{center}
-  Le cahier des charges qui suit a pour but de présenter le projet du groupe Error 523.
-Il permet alors d'expliquer l'intérêt du projet Origin Is Unreachable, un jeu dans lequel un homme dont
-on ne connaît pas les origines (du moins au début) doit s'échapper d'une pyramide, gardée par une
-momie, entourée de mystère.
-Le groupe error 523 est composé de 4 étudiants de la promo 2022 d’EPITA.
-Grâce aux pages qui vont suivre, vous pourrez aisément constater différents questionnements
-autour de ce projet, nous pourrons vous en montrer le planning de déroulement, avec quels
-outils nous comptons le réaliser, la gestion du temps et du travail que nous avons prévue.
+
+  	\paragraph{		 Le cahier des charges qui suit a pour but de présenter le projet du groupe
+Error 523.\newline} 
+
+	Il permet alors d'expliquer l'intérêt du projet Origin Is Unreachable, un jeu dans lequel un homme dont on ne connaît pas les origines (du moins au début) doit s'échapper d'une pyramide, gardée par une
+momie et entourée de mystère.
+Le groupe est composé de 4 étudiants de la promo 2022 d’EPITA.
+Grâce aux pages qui vont suivre, vous pourrez aisément constater quels sont différents questionnements
+autour de ce projet, nous pourrons vous en montrer le planning de déroulement, les outils avec lesquels nous comptons le réaliser, la gestion du temps et du travail que nous avons prévue.
 Pour clore cette introduction, nous pouvons dire que ce travail est considéré comme le premier réel
 projet que nous devons faire sur une grande durée et dans la plus grande autonomie.
 \vspace*{\stretch{1}}
@@ -43,7 +44,7 @@ projet que nous devons faire sur une grande durée et dans la plus grande autono
 \section {A propos du groupe}
 \subsection{Formation du groupe}
 \paragraph{}
-Arrivant a l'EPITA et ne connaissant personne, nous nous sommes rencontrés durant les premiers mois de l'année, rapidement nous nous sommes rendus compte que nous avions des affinités et que nous nous entendions très bien. En accord sur la plupart des sujets et ayant tous une idée très similaire du projet, nous avons décidé de nous mettre ensemble assez rapidement, en se laissant les derniers mois du premier semestre pour juger de notre capacité à travailler tout les quatre et si nous pensions pouvoir réussir ce projet. C'est alors que nous avons décidé de former le groupe Error 523 au début du mois de décembre. Nous pensons que ce projet va nous permettre de progresser aussi bien sur notre capacité à travailler en groupe, à évoluer individuellement, permettre de développer toujours plus nos compétences dans le milieu de l'informatique ainsi que dans la gestion de travaux.
+Arrivant à l'EPITA et ne connaissant personne, nous nous sommes rencontrés durant les premiers mois de l'année, rapidement nous nous sommes rendus compte que nous avions des affinités et que nous nous entendions très bien. En accord sur la plupart des sujets et ayant tous une idée très similaire du projet, nous avons décidé de nous mettre ensemble assez rapidement, en se laissant les derniers mois du premier semestre pour juger de notre capacité à travailler tout les quatre et si nous pensions pouvoir réussir ce projet. C'est alors que nous avons décidé de former le groupe Error 523 au début du mois de décembre. Nous pensons que ce projet va nous permettre de progresser aussi bien dans notre capacité à travailler en groupe, qu'à évoluer individuellement, permettre de développer toujours plus nos compétences dans le milieu de l'informatique ainsi que dans la gestion de travaux.
 
 \paragraph{}
 De plus, ayant tous des domaines de prédilections dans l'informatique, la répartition des tâches (que vous pourrez voir plus loin dans ce même cahier) s'est faite naturellement et à ce jour le travail s'organise assez bien. Malgré des emplois du temps différents car nous ne sommes pas tous dans la même classe, nous arrivons à trouver des moments pour travailler, autant individuellement qu'ensemble.
@@ -78,7 +79,7 @@ Programmeur scripts et Programmeur réseaux}
 
 Ayant un entourage travaillant dans le milieu de l’informatique et de par l’ampleur que prend celle-ci dans la société autant actuelle que future, l’idée de travailler dans ce domaine m'est apparue nettement.
 
-Malgré cela je n’ai que très peu pratiqué avant mon entré à l’EPITA et ce premier semestre était à la hauteur de mes espérances. J’ai très vite voulu participer à des projets de groupe ou individuel et en ayant pris connaissance du projet de fin d’année, j’ai vite commencé à étudié la programmation avec Unity. J’ai aussi pris part à de nombreuses conférences ou encore évènements comme une « Jam » où nous avons avec un camarade rendu un jeu fait en une dizaine d’heures avec l’aide de Unity. Voilà pourquoi au sein de ce projet je m’occuperai principalement des scripts CSharp avec Unity mais aussi de la partie réseau.
+Malgré cela je n’ai que très peu pratiqué avant mon entré à l’EPITA et ce premier semestre était à la hauteur de mes espérances. J’ai très vite voulu participer à des projets de groupe ou individuel et en ayant pris connaissance du projet de fin d’année, j’ai vite commencé à étudier la programmation avec Unity. J’ai aussi pris part à de nombreuses conférences ou évènements comme une « Jam » où nous avons avec un camarade rendu un jeu fait en une dizaine d’heures avec l’aide de Unity. Voilà pourquoi au sein de ce projet je m’occuperai principalement des scripts CSharp avec Unity mais aussi de la partie réseau.
 
 J’espère de ce projet qu’il m’apporte une certaine expérience dans le domaine de l’informatique, mais aussi dans le travail d’équipe qui est selon moi quelque chose de primordial dans ce milieu. Je compte mener ce projet à son terme avec mon équipe.
 
@@ -101,9 +102,9 @@ jeu intéressant et différent des autres tout en restant de près ou de loin ac
 La suite nous est venue naturellement en développant
 notre idée en groupe. Étant partie d'une simple idée de jeu d'horreur, cette dernière a progressivement germé et
 nous avons fini par décider de faire évoluer le personnage dans une pyramide, changeant un peu du
-décor d'une simple maison ou ferme, que l'on retrouve fréquemment dans les jeux de ce style.
+décor d'une simple maison ou d'une ferme, que l'on retrouve fréquemment dans les jeux de ce style.
 Nous avons pu puiser nos idées de différents autres jeux, tel Slender, Resident Evil ou encore Outlast,
-pour pouvoir imaginer notre jeu. Malgré un décor complètement différent de ces derniers, nous
+pour pouvoir imaginer le nôtre. Malgré un décor complètement différent de ces derniers, nous
 comptons bien rendre le jeu un tant soit peu horrifique du moins dans l'ambiance.
 Des courses dans des labyrinthes et des énigmes à résoudre vous attendent donc dans la suite de cette
 description...
@@ -111,14 +112,14 @@ description...
 \newpage
 \subsection{Nature du projet}
 \subsubsection{Type de jeu}
-Notre projet est un jeu d'aventure basé sur l'horreur et des énigmes, le tout à la première personne.
+Notre projet est un jeu d'aventure fondé sur l'horreur et des énigmes, le tout à la première personne.
 \subsubsection{Gameplay}
-Pour la partie solo le joueur est dans une pyramide, dont il doit s'échapper, coincé avec une momie qui le pourchasse. Pour finir le jeu, ce dernier devra retrouver des fragments de clé qui lui rappelleront son chemin jusqu'ici tout en lui permettant de sortir de sa terrible situation. Son parcours étant alterné de salles à énigmes et de courses poursuite dans un labyrinthe.
-Pour le multi-joueur, il se déroule à 5 maximum, avec un joueur qui incarnera la momie et pourra à sa guise placer des pièges ou déchiqueter ses victimes.
+Pour la partie solo le joueur est dans une pyramide, dont il doit s'échapper, coincé par une momie qui le pourchasse. Pour finir le jeu, ce dernier devra retrouver des fragments de clé qui lui rappelleront son chemin jusqu'ici tout en lui permettant de sortir de sa terrible situation. Son parcours étant alterné de salles à énigmes et de courses poursuite dans un labyrinthe.
+Pour la partie multi-joueur, il se déroule à 5 maximum, avec un joueur qui incarnera la momie et pourra à sa guise placer des pièges ou déchiqueter ses victimes.
 Les autres devront comme dans la partie solo essayer de s'échapper.
 \subsubsection{Scénario}
 Un homme se retrouve seul, dans une pièce sombre, sans aucun souvenir...
-Très vite, il se rend compte que cette pièce, dont les murs sont couverts de hiéroglyphes et dont le sol est jonché d'os, qui doivent être ici depuis plusieurs centaine d'années, n'est pas un endroit banal....
+Très vite, il se rend compte que cette pièce, dont les murs sont couverts de hiéroglyphes et dont le sol est jonché d'os, qui doivent être là depuis plusieurs centaine d'années, n'est pas un endroit banal....
 Mais il a beau chercher, aucun souvenir ne lui revient....
 Il décide alors de tenter de s'échapper....
 Sortir de la salle ? Il y arrivera sûrement... Mais échapper à la momie qui le pourchassera dans le labyrinthe et les salles suivantes ? Tout devient incertain...
@@ -127,13 +128,13 @@ Si néanmoins il y parvient, il trouvera sur son chemin les fragments d'une myst
 \newpage
 \section{Objet de l'étude}
 \subsection{Intérêt du projet en groupe}
-l'intérêt de ce projet pour le groupe réside essentiellement dans l'acquisition de compétences humaines
+L'intérêt de ce projet pour le groupe réside essentiellement dans l'acquisition de compétences humaines
 permettant de travailler en groupe: la cohésion, l'écoute, la diplomatie, le respect de l'autre et des idées partagées.
-Le fait que les membres du groupe se complètent par leurs qualités ainsi que leurs défauts permet de s'accorder une plus grande confiance dans la réalisation des différentes tâches et de proposer un travail
+Le fait que les membres du groupe se complètent par leurs qualités ainsi que leurs défauts, leur permet de s'accorder une plus grande confiance dans la réalisation des différentes tâches et de proposer un travail
 homogène et de qualité.
 Ce projet étant le premier, il nous permettra d'apprendre les rudiments du travail en groupe et d'être
 alors prêts pour affronter les années qui suivront ou du moins les
-prochains projets (nous l'espérons, plus sereinement).
+prochains projets, nous l'espérons, plus sereinement.
 
 \subsection{Intérêts individuels}
 \paragraph{}
@@ -186,7 +187,7 @@ Découpage du jeu:
  \hline 
  \cellcolor{lightgray}Site Web &  & \cellcolor{red} &  &  \\ 
  \hline 
- \cellcolor{lightgray} Réseau & \cellcolor{orange} &  & \cellcolor{yellow} & \cellcolor{orange} \\ 
+ \cellcolor{lightgray} Réseau & \cellcolor{orange} &  & \cellcolor{yellow} & \cellcolor{red} \\ 
  \hline 
  \cellcolor{lightgray}Musique/Son &  & \cellcolor{yellow} &  & \cellcolor{yellow} \\ 
  \hline 
@@ -204,9 +205,9 @@ Découpage du jeu:
 \newpage
 \section{Ressources utilisées}
 \subsection{Le matériel}
-Le matériel principal sera nos ordinateurs, néanmoins nous avons aussi utilisé une tablette graphique
+Le matériel principal sera constitué de nos ordinateurs, néanmoins nous avons aussi utilisé une tablette graphique
 pour la création des logos.
-Le plus gros du travail se fera donc à partir des ordinateurs, même si la consommation de nourriture
+La majeure partie du travail se fera donc à partir des ordinateurs, même si la consommation de nourriture
 peu recommandée pour le régime sera nécessaire pour travailler dans les conditions les plus correctes !
 \subsection{Les logiciels}
 Nous utiliserons les logiciels suivants pour mener notre projet à bien:
@@ -232,7 +233,7 @@ Les ressources économiques se résument très rapidement, possédant déjà l'e
 \section{Conclusion}
 Ce projet est donc un défi que nous allons relever du mieux que nous pourrons, nous allons mettre le meilleur de nous-même pour le réussir le mieux possible.
 
-Il représente un enjeu de taille du fait que nous débutons globalement dans le milieu de l'informatique, il permettra de développer nos compétences en même temps que la réalisation d'un projet plus que concret (aucun d'entre nous ne se serait imaginé, il y a ne serait-ce que deux ans, qu'un jour il créerait un jeu vidéo !).
+Il représente un enjeu de taille du fait que nous débutons globalement dans le milieu de l'informatique, il permettra de développer nos compétences en même temps que la réalisation d'un projet plus que concret : aucun d'entre nous ne se serait imaginé, il y a ne serait-ce que deux ans, qu'un jour il créerait un jeu vidéo !.
 
 Nous nous efforcerons de coller à ce cahier des charges qui nous permet d'ores et déjà de planifier notre travail, à la fin de ce projet nous serons donc en mesure de proposer un jeu vidéo en 3D assez complet dans le style que nous avons décidé de lui donner.
 
