CdCharges endly revised

--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -66,7 +66,7 @@ Au sein du groupe Error 523, je suis principalement chargé du game design mais 
 J'espère, grâce à ce projet, pouvoir améliorer mes compétences dans le monde de l'informatique, mais aussi dans ma capacité à travailler en groupe, et je compte bien mener ce projet à son terme avec le reste de mon équipe.
 
 \begin{center}
-\textbf{Thibault LEMPEREUR "Thibal" - 18 ans - Ancien Terminal S\newline Développeur web et Programmeur scripts}
+\textbf{Thibault LEMPEREUR "Tibal" - 18 ans - Ancien Terminal S\newline Développeur web et Programmeur scripts}
 
 \end{center}
 
