--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -55,7 +55,7 @@ De plus, ayant tous des domaines de prédilections dans l'informatique, la répa
 \subsection{Présentation des membres}
 \baselineskip = 16 pt
 \begin{center}
-\textbf{Thomas Vaton "Trasher" - 18 ans - Ancien Terminale S\newline
+\textbf{Thomas VATON "Trasher" - 18 ans - Ancien Terminale S\newline
 Game designer et Programmeur réseaux}
 \end{center}
 
@@ -161,38 +161,51 @@ Découpage du jeu:
 \hline 
 \rowcolor{cyan} Avancement & Soutenance 1 & Soutenance 2 & Soutenance 3 \\ 
 \hline 
-\cellcolor{lightgray}Graphisme & \cellcolor{yellow} & \cellcolor{yellow} & \cellcolor{orange} \\ 
+\cellcolor{lightgray} &\multicolumn{3}{|c|}{\cellcolor{lightgray} Solo } \\
 \hline 
-\cellcolor{lightgray}Script & \cellcolor{yellow} &  \cellcolor{orange} & \cellcolor{red}  \\ 
+\cellcolor{lightgray}Graphisme & \cellcolor{yellow} 10\% & \cellcolor{yellow} 30\% & \cellcolor{orange} 80\%\\ 
 \hline 
-\cellcolor{lightgray}Scénario & \cellcolor{orange} &  \cellcolor{orange} &  \cellcolor{red} \\ 
+\cellcolor{lightgray}Script & \cellcolor{yellow} 30\% &  \cellcolor{orange} 60\% & \cellcolor{red} 95\% \\ 
 \hline 
-\cellcolor{lightgray}Site Web & \cellcolor{yellow} &  \cellcolor{orange} & \cellcolor{red}  \\ 
+\cellcolor{lightgray}Scénario & \cellcolor{orange} 50\%&  \cellcolor{orange}80\% &  \cellcolor{red}100\% \\ 
+\hline 
+\cellcolor{lightgray}Site Web & \cellcolor{yellow} 10\% &  \cellcolor{orange}50\% & \cellcolor{red} 90\% \\ 
 \hline
-\cellcolor{lightgray}Réseau & \cellcolor{yellow} & \cellcolor{yellow} & \cellcolor{red} \\ 
+\cellcolor{lightgray}Musique/Son & 0\% & \cellcolor{yellow} 20\% &  \cellcolor{orange} 50\% \\ 
 \hline 
-\cellcolor{lightgray}Musique/Son &  & \cellcolor{yellow} &  \cellcolor{orange}  \\ 
+\cellcolor{lightgray} &\multicolumn{3}{|c|}{\cellcolor{lightgray} Multi-Joueur } \\
 \hline 
+\cellcolor{lightgray} Client & \cellcolor{yellow} 5\% & \cellcolor{orange} 30\% & \cellcolor{red} 90\% \\ 
+\hline 
+\cellcolor{lightgray} Serveur & \cellcolor{yellow} 10\% & \cellcolor{orange} 40\% & \cellcolor{red} 90\% \\ 
+\hline 
+
 \end{tabular}
 \paragraph{}
 \begin{tabular}{|c|c|c|c|c|}
  \hline 
  \rowcolor{cyan}Tâches \ Pers. & Trasher & Tibal & Zahpod & Flow \\ 
  \hline 
+ 
  \cellcolor{lightgray}Graphisme & \cellcolor{red} &  &  & \cellcolor{yellow} \\ 
  \hline 
  \cellcolor{lightgray}Script &  & \cellcolor{yellow} & \cellcolor{red} & \cellcolor{yellow} \\ 
+ \hline 
+  \cellcolor{lightgray} Interface Utilisateur & \cellcolor{yellow}  &  &  & \cellcolor{orange} \\ \cellcolor{lightgray} et Monstre & \cellcolor{yellow}  &  &  & \cellcolor{orange} \\ 
+ \hline 
+  \cellcolor{lightgray}I.A. &  &  & \cellcolor{red} &  \\ 
+ \hline 
+  \cellcolor{lightgray}Énigmes & \cellcolor{orange} & \cellcolor{orange} &  &  \\ 
  \hline 
  \cellcolor{lightgray}Scénario & \cellcolor{yellow} & \cellcolor{yellow} & \cellcolor{yellow} & \cellcolor{yellow} \\ 
  \hline 
  \cellcolor{lightgray}Site Web &  & \cellcolor{red} &  &  \\ 
  \hline 
- \cellcolor{lightgray} Réseau & \cellcolor{orange} &  & \cellcolor{yellow} & \cellcolor{red} \\ 
+ \cellcolor{lightgray} Réseau & \cellcolor{orange} &  & \cellcolor{yellow}  & \cellcolor{red}  \\ 
  \hline 
  \cellcolor{lightgray}Musique/Son &  & \cellcolor{yellow} &  & \cellcolor{yellow} \\ 
  \hline 
  \end{tabular}
- \
 \paragraph{Plus on va vers le rouge plus le niveau d'implication dans le domaine est élevé.} 
 \paragraph{}
  \begin{tabular}{|c|c|c|c|}
